<resources>
    <string name="app_name">Mobi Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="wrong_login_or_password">Неверный логин или пароль</string>
    <string name="registration">Регистрация</string>
    <string name="email">Почта</string>
    <string name="further">Далее</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="password_desc">Минимальная длина — 8 символов.\nДля надежности пароль должен содержать буквы и цифры.</string>
    <string name="passwords_do_not_match">Пароли не совпадают</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="password_error">Пароль должен содержать буквы и цифры</string>
    <string name="done">Готово</string>
    <string name="main">Главная</string>
    <string name="wallet">Кошелек</string>
    <string name="chats">Чаты</string>
    <string name="profile">Профиль</string>
    <string name="cancel">Отмена</string>
    <string name="liked">Понравившиеся</string>
    <string name="my_products">Мои товары</string>
    <string name="sign_out">Выйти</string>
    <string name="edit_short">Изм.</string>
    <string name="choose_photo">Выбрать фотографию</string>
    <string name="name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="birthdate">Дата рождения</string>
    <string name="add_number">Добавить номер</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="send_sms_desc">Мы отправим вам СМС с кодом подтверждения</string>
    <string name="phone_is_registered">Данный номер уже зарегистрирован</string>
    <string name="enter_sms_code">Введите код из СМС</string>
    <string name="repeat_request_in">Повторный запрос</string>
    <string name="resend_code">Отправить код еще раз</string>
    <string name="wrong_code">Неверный код</string>
    <string name="oh_empty">Ой, пусто!</string>
    <string name="detailed_description">Детальное описание</string>
    <string name="description_example" translatable="false">Безусловным лидером является BMW M4 CSL с впечатляющей мощностью в 551 л.с. и с 650 Нм крутящего момента. Уменьшение веса до 100 кг по сравнению с BMW M4 Competition Coupé, высокопроизводительный 6-цилиндровый рядный бензиновый двигатель M TwinPower Turbo и специально подобранные шины Ultra Track позволяют ощутить бескомпромиссную ДНК автоспорта в повседневной жизни.</string>
    <string name="product_overview_example">Безусловным лидером является BMW M4 CSL с впечатляющей мощностью в 551 л.с. и с 650 Нм крутящего момента.</string>
    <string name="name2">Название</string>
    <string name="short_desc">Краткое описание</string>
    <string name="add_photo">Добавить фото</string>
    <string name="cancel_adding_product_alert">Вы действительно хотите отменить добавление товара?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="price">Цена</string>
    <string name="finish_reg">Закончить регистрацию</string>
    <string name="sign_out_alert">Вы действительно хотите выйти с приложения?</string>
    <string name="reg_success">Регистрация прошла успешно</string>
    <string name="successfully_signed_in">Успешно вошли в систему</string>
    <string name="please_fill_all_the_required_fields">Пожалуиста, заполните все необходимые поля</string>
    <string name="product_added">Товар добавлен</string>
    <string name="please_enter_username_to_proceed">Пожалуиста, введите имя пользователя, чтобы продолжить</string>
</resources>