<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reg.CreatePasswordFragment">

    <include
        android:id="@+id/tbRepeatPassword"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/img_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbRepeatPassword" />

    <TextView
        android:id="@+id/tvRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:text="@string/repeat_password"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgPassword" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/password_desc"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvRepeatPassword" />

    <EditText
        android:id="@+id/etCreatedPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="33.5dp"
        android:background="@null"
        android:enabled="false"
        android:fontFamily="@font/gothampro_bold"
        android:gravity="center"
        android:inputType="textPassword"
        android:textColor="@color/black2"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        tools:text="Almaty2023" />

    <EditText
        android:id="@+id/etRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:fontFamily="@font/gothampro_bold"
        android:gravity="center"
        android:inputType="textPassword"
        android:textColor="@color/black2"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/etCreatedPassword"
        tools:text="Almaty2023" />

    <TextView
        android:id="@+id/tvRepeatPasswordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/passwords_do_not_match"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/etRepeatPassword"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreatePassword"
        style="@style/ButtonStyle"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="58dp"
        android:backgroundTint="@color/grey"
        android:enabled="false"
        android:text="@string/done"
        app:layout_constraintTop_toBottomOf="@id/etRepeatPassword"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>