<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.logged_in.profile.EnterPhoneFragment">

    <include
        android:id="@+id/tbEnterPhone"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:src="@drawable/img_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbEnterPhone" />

    <TextView
        android:id="@+id/tvEnterPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:text="@string/enter_phone_number"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgPhone" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/send_sms_desc"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvEnterPhone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phoneContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@id/tvDesc">

        <TextView
            android:id="@+id/tvPhoneHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0(000) 000 000"
            android:gravity="end"
            android:textColor="@color/grey"
            android:textSize="28sp"
            android:fontFamily="@font/gothampro_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:textSize="28sp"
            android:fontFamily="@font/gothampro_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvPhoneHint"
            tools:text="7( " />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvPhoneError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/phone_is_registered"
        android:textColor="@color/red"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/phoneContainer"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnterPhone"
        style="@style/ButtonStyle"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/grey"
        android:enabled="false"
        android:text="@string/further"
        app:layout_constraintTop_toBottomOf="@id/phoneContainer"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>