<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".ui.logged_in.profile.EditProfileFragment">

    <include
        android:id="@+id/tbEditProfile"
        layout="@layout/toolbar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:src="@drawable/img_profile" />

    <TextView
        android:id="@+id/btnChoosePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingVertical="4dp"
        android:text="@string/choose_photo"
        android:textColor="@color/maine_blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etEditName"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/name"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:textStyle="bold" />

            <include
                android:id="@+id/space1"
                layout="@layout/space"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/etEditName" />

            <EditText
                android:id="@+id/etEditLastName"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/lastname"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/space1" />

            <include
                android:id="@+id/space2"
                layout="@layout/space"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/etEditLastName" />

            <EditText
                android:id="@+id/etEditUsername"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/user_name"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/space2" />

            <include
                android:id="@+id/space3"
                layout="@layout/space"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/etEditUsername" />

            <com.arefbhrn.maskededittext.MaskedEditText
                android:id="@+id/etEditBirthDate"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="date"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/space3"
                mask:allowed_chars="1234567890"
                mask:char_representation="0"
                mask:mask="00.00.0000" />

            <TextView
                android:id="@+id/birthdateHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/birthdate"
                android:textColor="@color/grey"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@id/etEditBirthDate"
                app:layout_constraintBottom_toBottomOf="@id/etEditBirthDate"
                app:layout_constraintStart_toStartOf="@id/etEditBirthDate"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/containerAddNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:paddingVertical="10dp"
                    android:text="@string/add_number"
                    android:textColor="@color/maine_blue"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etPhone"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:enabled="false"
                    android:gravity="end"
                    android:hint="0(000) 000 000"
                    android:inputType="phone"
                    android:paddingVertical="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <include
                layout="@layout/space"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp" />

            <EditText
                android:id="@+id/etEditEmail"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>