<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reg.CreateUsernameFragment">

    <include
        android:id="@+id/tbCreateLogin"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbCreateLogin" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/AppTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivIcon" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/user_name"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/etNewUsername"
        style="@style/AuthEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        tools:text="Алеся" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etNewUsername" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/AuthEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        tools:text="sergeykrash01@mail.ru" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateUsernameFurther"
        style="@style/ButtonStyle"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="58dp"
        android:backgroundTint="@color/grey"
        android:enabled="false"
        android:text="@string/further"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>